cluster/tekton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: "internal"
spec:
  rules:
  - host: tekton.sko.ai
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tekon.sko.ai
